--- a/page2_jupyter.ipynb
+++ b/page2_jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "146ff53e-ea32-4e44-925f-8e9a9ec87f33",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "69e03f42-0e83-439a-b08c-b6b0f46baea7",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fed2c0a6-e4d2-4b42-8f8c-8b63d9c5edb6",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "282d777e-48a3-4cdc-9e7c-23916e589924",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "12617636-d2d4-45cd-b9c7-bc35cdc30a9a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "ca56de24-b0b5-4dee-89b6-323b20c11395",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "014fb8a1-5c17-477a-b24e-94a68d77021f",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_29936\\2199822850.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\20250003\\AppData\\Local\\Temp\\ipykernel_18148\\2199822850.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -86,289 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "a19b8179-b767-4fb0-b6e1-427471ca9528",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_stocks = df_stocks[['대분류','분류','ff/aum','return_1w','AUM']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a36f80db-e46d-4821-87dc-d41ccc668781",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>대분류</th>\n",
-       "      <th>분류</th>\n",
-       "      <th>ff/aum</th>\n",
-       "      <th>return_1w</th>\n",
-       "      <th>AUM</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>자산군</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>DM</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>8797502.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>EM</td>\n",
-       "      <td>-0.13</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>830413.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>US</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>4782003.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>132038.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-0.9</td>\n",
-       "      <td>596752.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>China</td>\n",
-       "      <td>-0.25</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>321113.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>Taiwan</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>77000.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>Korea</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-0.8</td>\n",
-       "      <td>10361.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>India</td>\n",
-       "      <td>-0.27</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>83239.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Style</td>\n",
-       "      <td>Growth</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>1551033.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Style</td>\n",
-       "      <td>Value</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1125434.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Style</td>\n",
-       "      <td>Large</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>7395675.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Style</td>\n",
-       "      <td>Mid</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>432739.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Style</td>\n",
-       "      <td>Small</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>513479.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Communication</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>-4.2</td>\n",
-       "      <td>38899.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Discretionary</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>38800.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Staples</td>\n",
-       "      <td>-0.67</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>25282.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Energy</td>\n",
-       "      <td>-0.67</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>68627.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Financial</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>115874.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Healthcare</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>97968.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Industrial</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>-1.5</td>\n",
-       "      <td>54941.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Materials</td>\n",
-       "      <td>-0.72</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>37388.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>387889.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주식</th>\n",
-       "      <td>Sector</td>\n",
-       "      <td>Utilites</td>\n",
-       "      <td>-1.13</td>\n",
-       "      <td>-0.8</td>\n",
-       "      <td>31296.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         대분류             분류  ff/aum  return_1w        AUM\n",
-       "자산군                                                      \n",
-       "주식   Country             DM    0.09       -0.5  8797502.3\n",
-       "주식   Country             EM   -0.13        0.3   830413.9\n",
-       "주식   Country             US    0.11       -1.0  4782003.9\n",
-       "주식   Country         Europe    0.16        1.8   132038.9\n",
-       "주식   Country          Japan    0.16       -0.9   596752.2\n",
-       "주식   Country          China   -0.25       -0.4   321113.3\n",
-       "주식   Country         Taiwan    0.00        0.0    77000.1\n",
-       "주식   Country          Korea    0.00       -0.8    10361.4\n",
-       "주식   Country          India   -0.27        1.7    83239.8\n",
-       "주식     Style         Growth    0.20       -1.2  1551033.4\n",
-       "주식     Style          Value    0.07        0.4  1125434.4\n",
-       "주식     Style          Large    0.04       -0.5  7395675.7\n",
-       "주식     Style            Mid    0.14       -0.3   432739.6\n",
-       "주식     Style          Small    0.05       -0.3   513479.5\n",
-       "주식    Sector  Communication    0.28       -4.2    38899.0\n",
-       "주식    Sector  Discretionary    1.13        1.0    38800.8\n",
-       "주식    Sector        Staples   -0.67        1.6    25282.7\n",
-       "주식    Sector         Energy   -0.67       -2.5    68627.8\n",
-       "주식    Sector      Financial    1.68        1.0   115874.8\n",
-       "주식    Sector     Healthcare    0.23        1.5    97968.3\n",
-       "주식    Sector     Industrial    2.00       -1.5    54941.9\n",
-       "주식    Sector      Materials   -0.72       -0.4    37388.5\n",
-       "주식    Sector     Technology    0.48       -3.5   387889.9\n",
-       "주식    Sector       Utilites   -1.13       -0.8    31296.5"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_stocks"
    ]
   },
   {
@@ -1328,19 +1051,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e1ce7ff0-fa49-4b16-aba2-52939b455b0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e61c6a29-1e68-4ec7-aebf-053f44490d5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\20250003\\AppData\\Local\\Temp\\ipykernel_18148\\25103330.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_stocks['대분류'] =['Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Credit Rating','Credit Rating','Credit Rating','Maturity','Maturity','Maturity']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# CSV 파일 불러오기\n",
+    "file_path = \"./data/page2_ff,aum.csv\"  # 실제 파일 경로로 변경 필요\n",
+    "df_page2 = pd.read_csv(file_path, index_col=0)\n",
+    "\n",
+    "# 주식 데이터 필터링\n",
+    "df_stocks = df_page2[df_page2.index == '채권']\n",
+    "\n",
+    "df_stocks['대분류'] =['Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Segmentation','Credit Rating','Credit Rating','Credit Rating','Maturity','Maturity','Maturity']\n",
+    "df_stocks = df_stocks[['대분류','분류','ff/aum','return_1w','AUM']]\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1353,9 +1094,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1367,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
